--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
 		"commit": "cz",
 		"dev": "vite --open",
 		"prepare": "husky install",
-		"serve": "vite preview",
-		"serve:test": "start-server-and-test serve http://localhost:4173",
-		"test": "jest --watch",
-		"test:ci": "jest --ci",
-		"test:e2e": "pnpm serve:test 'cypress open'",
-		"test:e2e:headless": "pnpm serve:test 'cypress run'",
-		"test:e2e:ci": "vite build && pnpm serve:test 'cypress run --record'",
+		"preview": "vite preview",
+		"preview:test": "start-server-and-test preview http://localhost:4173",
+		"test": "vitest",
+		"test:ci": "vitest run",
+		"test:e2e": "pnpm preview:test 'cypress open'",
+		"test:e2e:headless": "pnpm preview:test 'cypress run'",
+		"test:e2e:ci": "vite build && pnpm preview:test 'cypress run --record'",
 		"format": "prettier -uw --ignore-path .gitignore .",
 		"run-tsc": "tsc",
 		"run-eslint": "eslint --cache --fix --ignore-path .gitignore --ext .ts,.tsx src",
@@ -29,10 +29,6 @@
 		"react-router-dom": "6.2.1"
 	},
 	"devDependencies": {
-		"@babel/core": "7.17.5",
-		"@babel/preset-env": "7.16.11",
-		"@babel/preset-react": "7.16.7",
-		"@babel/preset-typescript": "7.16.7",
 		"@cypress/code-coverage": "3.9.12",
 		"@nabla/vite-plugin-eslint": "1.4.0",
 		"@tailwindcss/forms": "0.4.0",
@@ -43,8 +39,6 @@
 		"@testing-library/react-hooks": "7.0.2",
 		"@testing-library/user-event": "13.5.0",
 		"@types/css-mediaquery": "0.1.1",
-		"@types/jest": "27.4.0",
-		"@types/node": "17.0.18",
 		"@types/react": "17.0.39",
 		"@types/react-dom": "17.0.11",
 		"@types/react-router-dom": "5.3.3",
@@ -52,7 +46,7 @@
 		"@typescript-eslint/parser": "5.12.0",
 		"@vitejs/plugin-react": "1.2.0",
 		"autoprefixer": "10.4.2",
-		"babel-jest": "27.5.1",
+		"c8": "7.11.0",
 		"commitizen": "4.2.4",
 		"css-mediaquery": "0.1.2",
 		"cypress": "9.5.0",
@@ -64,8 +58,6 @@
 		"eslint-config-prettier": "8.3.0",
 		"eslint-plugin-cypress": "2.12.1",
 		"eslint-plugin-import": "2.25.4",
-		"eslint-plugin-jest": "26.1.1",
-		"eslint-plugin-jest-dom": "4.0.1",
 		"eslint-plugin-jsx-a11y": "6.5.1",
 		"eslint-plugin-react": "7.28.0",
 		"eslint-plugin-react-hooks": "4.3.0",
@@ -73,8 +65,7 @@
 		"eslint-plugin-testing-library": "5.0.5",
 		"eslint-plugin-unicorn": "41.0.0",
 		"husky": "7.0.4",
-		"jest": "27.5.1",
-		"jest-watch-typeahead": "1.0.0",
+		"jsdom": "19.0.0",
 		"lint-staged": "12.3.4",
 		"msw": "0.36.8",
 		"npm-run-all": "4.1.5",
@@ -92,6 +83,7 @@
 		"vite": "2.8.4",
 		"vite-plugin-pwa": "0.11.13",
 		"vite-tsconfig-paths": "3.4.0",
+		"vitest": "0.4.1",
 		"whatwg-fetch": "3.6.2",
 		"workbox-build": "6.4.2",
 		"workbox-window": "6.4.2"
@@ -108,7 +100,7 @@
 		"*.css": "stylelint --cache --fix",
 		"*.{ts,tsx}": [
 			"eslint --cache --fix",
-			"jest --findRelatedTests --coverage=false"
+			"vitest related --run --coverage=false"
 		]
 	},
 	"nyc": {
