--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -179,6 +179,7 @@
 			"files": ["**/__tests__/**/*.ts?(x)"],
 			"extends": ["plugin:testing-library/react"],
 			"rules": {
+				"@typescript-eslint/no-magic-numbers": ["off"],
 				"testing-library/no-await-sync-events": [
 					"error",
 					{
