--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
 		"format": "prettier -uw --cache --ignore-path .gitignore .",
 		"run-tsc": "tsc",
 		"run-eslint": "eslint --cache --fix --ignore-path .gitignore --ext .ts,.tsx .",
-		"run-stylelint": "stylelint --cache --fix --ignore-path .gitignore \"**/*.css\"",
+		"run-stylelint": "stylelint --cache --fix --ignore-path .gitignore **/*.css",
 		"lint": "run-p run-tsc run-eslint run-stylelint",
 		"validate": "run-p lint test:ci test:e2e:headless"
 	},
 	"dependencies": {
-		"react": "17.0.2",
-		"react-dom": "17.0.2",
-		"react-query": "3.39.2",
+		"@tanstack/react-query": "4.1.3",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
 		"react-router-dom": "6.3.0"
 	},
 	"devDependencies": {
@@ -34,12 +34,11 @@
 		"@testing-library/cypress": "8.0.3",
 		"@testing-library/dom": "8.17.1",
 		"@testing-library/jest-dom": "5.16.5",
-		"@testing-library/react": "12.1.5",
-		"@testing-library/react-hooks": "8.0.1",
+		"@testing-library/react": "13.3.0",
 		"@testing-library/user-event": "14.4.3",
 		"@types/css-mediaquery": "0.1.1",
-		"@types/react": "17.0.48",
-		"@types/react-dom": "17.0.17",
+		"@types/react": "18.0.17",
+		"@types/react-dom": "18.0.6",
 		"@types/react-router-dom": "5.3.3",
 		"@types/testing-library__jest-dom": "5.14.5",
 		"@typescript-eslint/eslint-plugin": "5.33.0",
