--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"version": "0.0.0",
 	"scripts": {
-		"build": "tsc && vite build",
+		"build": "vite build",
 		"commit": "cz",
 		"dev": "vite --open",
 		"prepare": "husky install",
@@ -37,7 +37,7 @@
 		"@testing-library/jest-dom": "5.16.4",
 		"@testing-library/react": "12.1.5",
 		"@testing-library/react-hooks": "8.0.0",
-		"@testing-library/user-event": "13.5.0",
+		"@testing-library/user-event": "14.2.0",
 		"@types/css-mediaquery": "0.1.1",
 		"@types/react": "17.0.45",
 		"@types/react-dom": "17.0.17",
@@ -52,7 +52,7 @@
 		"css-mediaquery": "0.1.2",
 		"cypress": "9.6.1",
 		"cz-conventional-changelog": "3.3.0",
-		"eslint": "8.15.0",
+		"eslint": "8.16.0",
 		"eslint-config-airbnb": "19.0.4",
 		"eslint-config-airbnb-base": "15.0.0",
 		"eslint-config-airbnb-typescript": "17.0.0",
@@ -60,8 +60,8 @@
 		"eslint-plugin-cypress": "2.12.1",
 		"eslint-plugin-import": "2.26.0",
 		"eslint-plugin-jsx-a11y": "6.5.1",
-		"eslint-plugin-react": "7.29.4",
-		"eslint-plugin-react-hooks": "4.4.0",
+		"eslint-plugin-react": "7.30.0",
+		"eslint-plugin-react-hooks": "4.5.0",
 		"eslint-plugin-react-prefer-function-component": "2.0.0",
 		"eslint-plugin-testing-library": "5.5.0",
 		"eslint-plugin-unicorn": "42.0.0",
@@ -73,7 +73,7 @@
 		"postcss": "8.4.14",
 		"prettier": "2.6.2",
 		"prettier-plugin-tailwindcss": "0.1.11",
-		"rollup": "2.73.0",
+		"rollup": "2.74.1",
 		"rollup-plugin-istanbul": "3.0.0",
 		"start-server-and-test": "1.14.0",
 		"stylelint": "14.8.3",
@@ -84,7 +84,7 @@
 		"vite": "2.9.9",
 		"vite-plugin-pwa": "0.12.0",
 		"vite-tsconfig-paths": "3.4.1",
-		"vitest": "0.12.6",
+		"vitest": "0.12.9",
 		"whatwg-fetch": "3.6.2",
 		"workbox-build": "6.5.3",
 		"workbox-window": "6.5.3"
