--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
 	"dependencies": {
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
-		"react-query": "3.39.0",
+		"react-query": "3.39.1",
 		"react-router-dom": "6.3.0"
 	},
 	"devDependencies": {
-		"@cypress/code-coverage": "3.9.12",
+		"@babel/core": "7.18.2",
+		"@babel/preset-env": "7.18.2",
+		"@cypress/code-coverage": "3.10.0",
 		"@nabla/vite-plugin-eslint": "1.4.0",
 		"@tailwindcss/forms": "0.5.2",
 		"@testing-library/cypress": "8.0.2",
@@ -43,10 +45,11 @@
 		"@types/react-dom": "17.0.17",
 		"@types/react-router-dom": "5.3.3",
 		"@types/testing-library__jest-dom": "5.14.3",
-		"@typescript-eslint/eslint-plugin": "5.26.0",
-		"@typescript-eslint/parser": "5.26.0",
+		"@typescript-eslint/eslint-plugin": "5.27.0",
+		"@typescript-eslint/parser": "5.27.0",
 		"@vitejs/plugin-react": "1.3.2",
 		"autoprefixer": "10.4.7",
+		"babel-loader": "8.2.5",
 		"c8": "7.11.3",
 		"commitizen": "4.2.4",
 		"css-mediaquery": "0.1.2",
@@ -67,24 +70,25 @@
 		"eslint-plugin-unicorn": "42.0.0",
 		"husky": "8.0.1",
 		"jsdom": "19.0.0",
-		"lint-staged": "12.4.2",
+		"lint-staged": "12.5.0",
 		"msw": "0.42.0",
 		"npm-run-all": "4.1.5",
 		"postcss": "8.4.14",
 		"prettier": "2.6.2",
 		"prettier-plugin-tailwindcss": "0.1.11",
-		"rollup": "2.74.1",
+		"rollup": "2.75.4",
 		"rollup-plugin-istanbul": "3.0.0",
 		"start-server-and-test": "1.14.0",
 		"stylelint": "14.8.5",
 		"stylelint-config-prettier": "9.0.3",
 		"stylelint-config-standard": "25.0.0",
 		"tailwindcss": "3.0.24",
-		"typescript": "4.6.4",
+		"typescript": "4.7.2",
 		"vite": "2.9.9",
 		"vite-plugin-pwa": "0.12.0",
-		"vite-tsconfig-paths": "3.4.1",
+		"vite-tsconfig-paths": "3.5.0",
 		"vitest": "0.13.0",
+		"webpack": "5.72.1",
 		"whatwg-fetch": "3.6.2",
 		"workbox-build": "6.5.3",
 		"workbox-window": "6.5.3"
