--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"test:e2e:ci": "vite build && pnpm preview:test 'cypress run --record'",
 		"format": "prettier -uw --cache --ignore-path .gitignore .",
 		"run-tsc": "tsc",
-		"run-eslint": "eslint --cache --fix --ignore-path .gitignore --ext .ts,.tsx src",
+		"run-eslint": "eslint --cache --fix --ignore-path .gitignore --ext .ts,.tsx .",
 		"run-stylelint": "stylelint --cache --fix --ignore-path .gitignore \"**/*.css\"",
 		"lint": "run-p run-tsc run-eslint run-stylelint",
 		"validate": "run-p lint test:ci test:e2e:headless"
@@ -29,69 +29,62 @@
 		"react-router-dom": "6.3.0"
 	},
 	"devDependencies": {
-		"@babel/core": "7.18.6",
-		"@babel/preset-env": "7.18.6",
-		"@cypress/code-coverage": "3.10.0",
 		"@nabla/vite-plugin-eslint": "1.4.1",
 		"@tailwindcss/forms": "0.5.2",
 		"@testing-library/cypress": "8.0.3",
-		"@testing-library/dom": "8.14.0",
+		"@testing-library/dom": "8.17.1",
 		"@testing-library/jest-dom": "5.16.5",
 		"@testing-library/react": "12.1.5",
 		"@testing-library/react-hooks": "8.0.1",
-		"@testing-library/user-event": "14.2.6",
+		"@testing-library/user-event": "14.4.3",
 		"@types/css-mediaquery": "0.1.1",
-		"@types/react": "17.0.47",
+		"@types/react": "17.0.48",
 		"@types/react-dom": "17.0.17",
 		"@types/react-router-dom": "5.3.3",
 		"@types/testing-library__jest-dom": "5.14.5",
-		"@typescript-eslint/eslint-plugin": "5.30.0",
-		"@typescript-eslint/parser": "5.30.0",
-		"@vitejs/plugin-react": "1.3.2",
-		"autoprefixer": "10.4.7",
-		"babel-loader": "8.2.5",
-		"c8": "7.11.3",
+		"@typescript-eslint/eslint-plugin": "5.33.0",
+		"@typescript-eslint/parser": "5.33.0",
+		"@vitejs/plugin-react": "2.0.1",
+		"autoprefixer": "10.4.8",
+		"c8": "7.12.0",
 		"commitizen": "4.2.5",
 		"css-mediaquery": "0.1.2",
-		"cypress": "9.7.0",
+		"cypress": "10.4.0",
 		"cz-conventional-changelog": "3.3.0",
-		"eslint": "8.19.0",
+		"eslint": "8.22.0",
 		"eslint-config-airbnb": "19.0.4",
 		"eslint-config-airbnb-base": "15.0.0",
 		"eslint-config-airbnb-typescript": "17.0.0",
 		"eslint-config-prettier": "8.5.0",
 		"eslint-plugin-cypress": "2.12.1",
 		"eslint-plugin-import": "2.26.0",
-		"eslint-plugin-jsx-a11y": "6.5.1",
+		"eslint-plugin-jsx-a11y": "6.6.1",
 		"eslint-plugin-react": "7.30.1",
 		"eslint-plugin-react-hooks": "4.6.0",
 		"eslint-plugin-react-prefer-function-component": "3.0.0",
-		"eslint-plugin-testing-library": "5.5.1",
-		"eslint-plugin-unicorn": "43.0.0",
+		"eslint-plugin-testing-library": "5.6.0",
+		"eslint-plugin-unicorn": "43.0.2",
 		"husky": "8.0.1",
 		"jsdom": "20.0.0",
 		"lint-staged": "13.0.3",
 		"msw": "0.44.2",
 		"npm-run-all": "4.1.5",
-		"postcss": "8.4.14",
+		"postcss": "8.4.16",
 		"prettier": "2.7.1",
-		"prettier-plugin-tailwindcss": "0.1.12",
-		"rollup": "2.77.0",
-		"rollup-plugin-istanbul": "3.0.0",
+		"prettier-plugin-tailwindcss": "0.1.13",
 		"start-server-and-test": "1.14.0",
-		"stylelint": "14.9.1",
+		"stylelint": "14.10.0",
 		"stylelint-config-prettier": "9.0.3",
-		"stylelint-config-standard": "26.0.0",
-		"tailwindcss": "3.1.6",
+		"stylelint-config-standard": "27.0.0",
+		"tailwindcss": "3.1.8",
 		"typescript": "4.7.4",
-		"vite": "2.9.14",
+		"vite": "3.0.7",
 		"vite-plugin-pwa": "0.12.3",
 		"vite-tsconfig-paths": "3.5.0",
-		"vitest": "0.16.0",
-		"webpack": "5.73.0",
+		"vitest": "0.21.1",
 		"whatwg-fetch": "3.6.2",
-		"workbox-build": "6.5.3",
-		"workbox-window": "6.5.3"
+		"workbox-build": "6.5.4",
+		"workbox-window": "6.5.4"
 	},
 	"browserslist": {
 		"production": "Edge >= 18, Firefox >= 60, Chrome >= 61, Safari >= 11, Opera >= 48",
@@ -106,12 +99,6 @@
 		"*.{ts,tsx}": [
 			"eslint --cache --fix",
 			"vitest related --run --coverage=false"
-		]
-	},
-	"nyc": {
-		"report-dir": "coverage/cypress",
-		"reporter": [
-			"lcov"
 		]
 	}
 }
