--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,3 @@
 {
-	"version": 2,
-	"routes": [
-		{ "handle": "filesystem" },
-		{ "src": "/.*", "dest": "/index.html" }
-	]
+	"rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
 }
