--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
 		"@typescript-eslint/eslint-plugin": "5.33.1",
 		"@typescript-eslint/parser": "5.33.1",
 		"@vitejs/plugin-react": "2.0.1",
+		"@vitest/coverage-istanbul": "0.22.0",
 		"autoprefixer": "10.4.8",
-		"c8": "7.12.0",
 		"commitizen": "4.2.5",
 		"css-mediaquery": "0.1.2",
 		"cypress": "10.6.0",
@@ -80,7 +80,7 @@
 		"vite": "3.0.8",
 		"vite-plugin-pwa": "0.12.3",
 		"vite-tsconfig-paths": "3.5.0",
-		"vitest": "0.21.1",
+		"vitest": "0.22.0",
 		"whatwg-fetch": "3.6.2",
 		"workbox-build": "6.5.4",
 		"workbox-window": "6.5.4"
