chore: update renovate config to group all updates weekly

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,4 +1,4 @@
 {
-	"extends": [":disableRateLimiting", "config:js-app"],
+	"extends": ["config:js-app", "schedule:weekly", "group:allNonMajor"],
 	"labels": ["dependencies"]
 }
