--- a/package.json
+++ b/package.json
@@ -99,5 +99,10 @@
 			"eslint --cache --fix",
 			"vitest related --run --coverage=false"
 		]
+	},
+	"pnpm": {
+		"overrides": {
+			"headers-polyfill": "3.1.2"
+		}
 	}
 }
