--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,7 +3,7 @@
 	"bracketSameLine": false,
 	"bracketSpacing": true,
 	"jsxSingleQuote": true,
-	"plugins": ["./node_modules/prettier-plugin-tailwindcss/dist/index.mjs"],
+	"plugins": ["prettier-plugin-tailwindcss"],
 	"printWidth": 80,
 	"quoteProps": "as-needed",
 	"semi": false,
