chore: update Stylelint configuration

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,5 +1,5 @@
 {
-	"extends": ["stylelint-config-standard", "stylelint-config-prettier"],
+	"extends": ["stylelint-config-standard"],
 	"rules": {
 		"at-rule-no-unknown": [
 			true,
