--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,9 +1,3 @@
 {
-	"recommendations": [
-		"bradlc.vscode-tailwindcss",
-		"dbaeumer.vscode-eslint",
-		"esbenp.prettier-vscode",
-		"stylelint.vscode-stylelint",
-		"visualstudioexptteam.vscodeintellicode"
-	]
+	"recommendations": ["bradlc.vscode-tailwindcss", "biomejs.biome"]
 }
