--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -24,7 +24,7 @@
 		"strict": true,
 		"target": "esnext",
 		"tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-		"types": ["@testing-library/jest-dom"],
+		"types": ["vitest/globals"],
 		"verbatimModuleSyntax": true
 	},
 	"include": ["src"]
