--- a/package.json
+++ b/package.json
@@ -13,40 +13,39 @@
 		"lint:tsc": "tsc -b",
 		"lint:biome": "biome check --write --unsafe",
 		"lint": "pnpm run \"/lint:./\"",
-		"format": "biome format",
+		"format": "biome format --write",
 		"validate": "pnpm lint && pnpm test:ci && pnpm test:e2e:ci",
 		"build": "vite build",
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"@tanstack/react-query": "5.80.6",
-		"@tanstack/react-query-devtools": "5.80.6",
-		"react": "19.1.0",
-		"react-dom": "19.1.0",
+		"@tanstack/react-query": "5.84.1",
+		"@tanstack/react-query-devtools": "5.84.1",
+		"react": "19.1.1",
+		"react-dom": "19.1.1",
 		"react-error-boundary": "6.0.0",
-		"react-router": "7.6.2",
+		"react-router": "7.8.0",
 		"valibot": "1.1.0"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "2.0.0-beta.6",
-		"@playwright/test": "1.52.0",
-		"@tailwindcss/vite": "4.1.8",
-		"@testing-library/dom": "10.4.0",
-		"@testing-library/jest-dom": "6.6.3",
+		"@biomejs/biome": "2.1.4",
+		"@playwright/test": "1.54.2",
+		"@tailwindcss/vite": "4.1.11",
+		"@testing-library/dom": "10.4.1",
+		"@testing-library/jest-dom": "6.6.4",
 		"@testing-library/react": "16.3.0",
 		"@testing-library/user-event": "14.6.1",
 		"@types/node": "22.15.30",
-		"@types/react": "19.1.6",
-		"@types/react-dom": "19.1.6",
-		"@vitejs/plugin-react": "4.5.1",
-		"@vitest/coverage-v8": "3.2.2",
-		"happy-dom": "17.6.3",
-		"msw": "2.10.1",
-		"tailwindcss": "4.1.8",
-		"typescript": "5.8.3",
-		"vite": "6.3.5",
-		"vite-tsconfig-paths": "5.1.4",
-		"vitest": "3.2.2"
+		"@types/react": "19.1.9",
+		"@types/react-dom": "19.1.7",
+		"@vitejs/plugin-react": "5.0.0",
+		"@vitest/coverage-v8": "3.2.4",
+		"happy-dom": "18.0.1",
+		"msw": "2.10.4",
+		"tailwindcss": "4.1.11",
+		"typescript": "5.9.2",
+		"vite": "7.1.1",
+		"vitest": "3.2.4"
 	},
 	"pnpm": {
 		"ignoredBuiltDependencies": [
