--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -1,4 +1,7 @@
 {
+	"formatter": {
+		"language_server": { "name": "biome" }
+	},
 	"code_actions_on_format": {
 		"source.fixAll.biome": true,
 		"source.organizeImports.biome": true,
@@ -8,13 +11,5 @@
 	},
 	"format_on_save": "on",
 	"tab_size": 2,
-	"hard_tabs": true,
-	"lsp": {
-		"vtsls": {
-			"autoUseWorkspaceTsdk": true,
-			"typescript": {
-				"tsdk": "node_modules/typescript/lib"
-			}
-		}
-	}
+	"hard_tabs": true
 }
